# youtubeFilterBackend

./: .flake8  .gitignore  LICENSE  README.md  SECURITY.md  manual.md  pyproject.toml  test.sh  test_mock.py  todo_Notes.md  whydoesitwork.py
.github/workflows/: ci.yml
frontend/: dataformat.ts  datagetter.ts  index.html  index.js  output.css  useTailwind you bum of a Programmer They need it
src/: AIDBHandler.py  Playlists.py  constants.py  database.py  main.py  playlists.py  recomendations.py  search.py  server.py  test_Funktions.py  test_Playlist.py  topicSwap.py  variable.py
src/Ai/: databaseSorter.py  searchImprover.py
src/database/: database.py  dataexporter.py  datainteracter.py  dbconstants.py  users_subscribers.db
youtube/: pyvenv.cfg
