[build-system]
requires = ["setuptools>==61.0"]
build-backend = "setuptools.build_meta"

[project]
name="youtubeFilter"
version="0.1.9"
dependencies = [
    "blinker>=1.9.0",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "Flask>=3.1.2",
    "flask-cors>=6.0.2",
    "google-api-core>=2.29.0",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.47.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "googleapis-common-protos>=1.72.0",
    "httplib2>=0.31.1",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.3",
    "oauthlib>=3.3.1",
    "pip>=24.0",
    "proto-plus>=1.27.0",
    "protobuf>=6.33.4",
    "pyasn1>=0.6.2",
    "pyasn1_modules>=0.4.2",
    "pyparsing>=3.3.2",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9.1",
    "uritemplate>=4.2.0",
    "urllib3>=2.6.3",
    "Werkzeug>=53.1.5",
]

[tool.uv]
dependency-groups.dev = [
    "bandit",
    "safety",
    "detect-secrets",
    "pytest",
    "flake8",
    "autopep8",
]