[project]
name = "youtubefilter"
version = "0.1.0"
description = ""
authors = [
    {name = "Henning Agge",email = "yagni@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "google-api-python-client (>=2.188.0,<3.0.0)",
    "google-api-core (>=2.29.0,<3.0.0)",
    "google-auth (>=2.48.0,<3.0.0)",
    "google-auth-httplib2 (>=0.3.0,<0.4.0)",
    "google-auth-oauthlib (>=1.2.4,<2.0.0)",
    "googleapis-common-protos (>=1.72.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "bandit (>=1.9.3,<2.0.0)",
    "safety (>=3.7.0,<4.0.0)",
    "detect-secrets (>=1.5.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
